Apply fixes suggested by Error Prone